# ChessViz

./: .travis.yml  CMakeLists.txt  Makefile  main.c
Test/: main.c  mainc.c  test_mod.c  test_mod.h
src/:  board_print_plain.c   board_print_plain.h  board.c  board.h  board_print_plain.c  board_print_plain.h  board_read.c  board_read.h  main.c  main.h
